<resources>
	<string name="app_name" translatable="false">Tasky</string>
	<string name="task_title">Task</string>
	<string name="routine_title">Routine</string>
	<string name="more_title">More</string>
	<string name="placeholder" translatable="false">Lorem Ipsum</string>
	<string name="content_desc_close">Exit page</string>
	<string name="edit_task_title">Edit task</string>
	<string name="edit_routine_title">Edit routine</string>
	<string name="save_button">Save</string>
	<string name="task_title_input_hint">Task\'s title*</string>
	<string name="task_description_input_hint">Task\'s description</string>
	<string name="required_input">* required</string>
	<string name="content_desc_date">Select date</string>
	<string name="content_desc_time">Select time</string>
	<string name="placeholder_date" translatable="false">25/05</string>
	<string name="placeholder_time" translatable="false">19:30</string>
	<string name="date_picker_title">Select the date</string>
	<string name="time_picker_title">Select the time</string>
	<string name="routine_title_input_hint">Routine\'s title*</string>
	<string name="routine_description_input_hint">Routine\'s description</string>
	<string name="required_input_error">This input is required</string>
	<string name="time_past_error">It\'s not possible to select past time</string>
	<string name="completed_tasks_option">See completed tasks</string>
	<string name="delete_all_tasks_option">Delete all tasks</string>
	<string name="delete_all_routines_option">Delete all routines</string>
	<string name="app_description">A task and routine manager</string>
	<string name="version">VERSION: v</string>
	<string name="onboard_last_page_text">todo</string>
	<string name="onboard_last_page_button_text">Go to my tasks</string>
	<string name="onboard_last_page_input_hint">Type your username</string>
	<string name="good_morning">Good morning</string>
	<string name="good_afternoon">Good afternoon</string>
	<string name="good_night">Good night</string>
	<string name="user_placeholder">User</string>
	<string name="delete_all_tasks_title">Delete all tasks?</string>
	<string name="delete_all_routines_title">Delete all routines?</string>
	<string name="delete_all_tasks_message">All pending and completed tasks will be deleted permanently!</string>
	<string name="delete_all_routines_message">All setted routines will be deleted permanently!</string>
	<string name="cancel">Cancel</string>
	<string name="delete">Delete</string>
	<string name="deletion_completed">All data has been deleted successfully</string>
	<string name="no_pending_tasks">No pending tasks.</string>
	<string name="no_routines_setted">No routines setted.</string>
	<string name="no_completed_tasks">No completed tasks.</string>
	<string name="tap_plus_to_add">Tap the + button to add!</string>
	<string name="notification_task_channel_description">Channel for receiving tasks notifications</string>
	<string name="onboard_permission_page_text">Tasky has notification support.\nTo make notifications to work, you need to grant these permissions:</string>
	<string name="alarms_permission">Alarms and reminders</string>
	<string name="notifications_permission">Notifications</string>
	<string name="change_username_option">Change your username</string>
	<string name="change_default_notification_time_option">Change default notification time</string>
	<string name="change">Change</string>
	<string name="export_data_option">Export data</string>
	<string name="import_data_option">Import data</string>
	<string name="import_error">Error while importing</string>
	<string name="restarting_after_import">Importing completed, restarting…</string>
	<string name="export_completed">File successfully exported</string>
	<string name="export_error">Error while exporting</string>
	<string name="permission_already_granted">This permission is already granted!</string>
	<string name="notifications_permission_rationale">Without this permission, you can\'t receive reminders about your tasks and routines!</string>
	<string name="notifications_permission_rationale_positive">Enable notifications</string>
	<string name="notifications_permission_rationale_negative">Disable notifications</string>
	<string name="receive_notifications_option">Receive notifications</string>
	<string name="storage_permission_not_granted">The necessary permissions was not granted.</string>
</resources>