<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"

	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="16dp"
	android:clipToPadding="false">

	<com.google.android.material.textfield.TextInputLayout
		style="?attr/textInputFilledDenseStyle"

		android:id="@+id/task_title_input_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:hint="@string/task_title_input_hint"

		app:helperTextEnabled="true"
		app:helperText="@string/required_input"
		app:errorEnabled="true" >

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/task_title_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		style="?attr/textInputOutlinedDenseStyle"

		android:id="@+id/task_description_input_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/task_description_input_hint" >

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/task_description_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</com.google.android.material.textfield.TextInputLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="10dp"
		android:gravity="center_vertical">

		<Button
			style="?attr/materialIconButtonStyle"

			android:id="@+id/date_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/content_desc_date"

			app:icon="@drawable/ic_calendar" />

		<com.google.android.material.chip.Chip
			style="@style/Widget.Material3.Chip.Assist"

			android:id="@+id/date_chip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="12sp"
			android:visibility="gone"

			tools:text="@string/placeholder_date"
			tools:visibility="visible"

			app:closeIcon="@drawable/ic_close"
			app:closeIconEnabled="true"
			app:closeIconVisible="true"
			app:closeIconTint="?attr/colorOnSurfaceVariant"
			app:chipBackgroundColor="?attr/colorSurfaceVariant"
			app:chipStrokeColor="?attr/colorOutlineVariant" />

		<Button
			style="?attr/materialIconButtonStyle"

			android:id="@+id/time_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/content_desc_time"

			app:icon="@drawable/ic_clock" />

		<com.google.android.material.chip.Chip
			style="@style/Widget.Material3.Chip.Assist"

			android:id="@+id/time_chip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="12sp"
			android:visibility="gone"

			tools:text="@string/placeholder_time"
			tools:visibility="visible"

			app:closeIcon="@drawable/ic_close"
			app:closeIconEnabled="true"
			app:closeIconVisible="true"
			app:closeIconTint="?attr/colorOnSurfaceVariant"
			app:chipBackgroundColor="?attr/colorSurfaceVariant"
			app:chipStrokeColor="?attr/colorOutlineVariant" />

	</LinearLayout>

	<Button
		style="?attr/materialButtonTonalStyle"

		android:id="@+id/save_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/save_button"
		android:layout_gravity="end" />

</LinearLayout>