<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"

	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:padding="32dp">

	<TextView
		style="?attr/textAppearanceDisplaySmall"
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:text="@string/onboard_last_page_text" />

	<EditText
		android:id="@+id/username_input"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minHeight="48dp"
		android:layout_marginBottom="32dp"
		android:inputType="text"
		android:hint="@string/onboard_last_page_input_hint"
		android:autofillHints="name" />

	<Button
		android:id="@+id/continue_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/onboard_last_page_button_text"/>

</LinearLayout>