<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"

	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:backgroundTint="?attr/colorSurfaceContainerHigh"

	app:cardCornerRadius="28dp"
	app:layout_constraintTop_toTopOf="parent"
	app:layout_constraintBottom_toBottomOf="parent" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:gravity="center" >

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_person_30dp"
			android:layout_marginTop="20dp"

			app:tint="?attr/colorPrimary" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/change_username_option"
			android:textColor="?attr/colorOnSurface"
			android:layout_marginTop="20dp"/>

		<com.google.android.material.textfield.TextInputLayout
			style="?attr/textInputOutlinedStyle"

			android:id="@+id/username_input_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="24dp"
			android:layout_marginEnd="24dp"
			android:layout_marginTop="16dp"

			app:helperTextEnabled="true"
			app:helperText="@string/required_input"
			app:errorEnabled="true">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/username_input"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/onboard_last_page_input_hint"/>

		</com.google.android.material.textfield.TextInputLayout>

		<Button
			style="?attr/materialButtonTonalStyle"
			android:id="@+id/change_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="24dp"
			android:layout_marginEnd="24dp"
			android:layout_marginTop="24dp"

			android:text="@string/change"/>

		<Button
			style="?attr/borderlessButtonStyle"

			android:id="@+id/cancel_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="24dp"
			android:layout_marginEnd="24dp"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="10dp"
			android:text="@string/cancel"/>

	</LinearLayout>


</com.google.android.material.card.MaterialCardView>